--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -186,6 +186,14 @@
       box-shadow: none !important;
 	}
 	
+	/*buttons with SVG images*/
+	#nav-bar .toolbarbutton-1[image$="svg"] .toolbarbutton-icon {
+	  max-width: 22px !important;
+	  max-height: 22px !important;
+	  width: auto !important;
+	  height: auto !important;
+	}
+	
 	/* zoom page add-on */
     #navigator-toolbox #nav-bar #zoompage-zoomdisplay-s,
     #navigator-toolbox #nav-bar #zoompage-zoomin-s,
