--- a/xpi/content/css/appbutton2io2.css
+++ b/xpi/content/css/appbutton2io2.css
@@ -17,11 +17,11 @@
 
 	#ctraddon_appbutton2:-moz-locale-dir(ltr) > label{
 	  -moz-appearance: none !important;
-      margin: 0 -26px 0 -34px !important;
+      margin: -1px -26px 0 -34px !important;
 	}
 	#ctraddon_appbutton2:-moz-locale-dir(rtl) > label{
 	  -moz-appearance: none !important;
-      margin: 0 -34px 0 -26px !important;
+      margin: -1px -34px 0 -26px !important;
 	}
 
 	#ctraddon_appbutton2 > .toolbarbutton-menu-dropmarker{
