--- a/xpi/content/css/invicons_navbar.css
+++ b/xpi/content/css/invicons_navbar.css
@@ -28,10 +28,10 @@
 	#nav-bar > #tabbrowser-tabs > .tabbrowser-arrowscrollbox > .scrollbutton-down {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/tab-arrow-left-inverted.png) !important;
 	}
-	#nav-bar > #new-tab-button,
+	/*#nav-bar > #new-tab-button,
 	#nav-bar > toolbarpaletteitem > #new-tab-button {
 	  list-style-image: url(chrome://browser/skin/tabbrowser/newtab-inverted.png) !important;
-	}
+	}*/
 	#nav-bar > #alltabs-button,
 	#nav-bar > toolbarpaletteitem > #alltabs-button {
 	  list-style-image: url("chrome://browser/skin/toolbarbutton-dropdown-arrow-inverted.png") !important;
