--- a/xpi/content/css/mac/mode_icons_and_text_extra.css
+++ b/xpi/content/css/mac/mode_icons_and_text_extra.css
@@ -79,4 +79,9 @@
 	#main-window toolbar #ctraddon_back-forward-dropmarker .toolbarbutton-icon {
 	  padding:0px 4px !important;
 	}
+	
+	#main-window #navigator-toolbox #PersonalToolbar .toolbarbutton-1 .toolbarbutton-icon {
+	  margin:0px !important;
+	  padding:0px !important;
+	}
 }
