--- a/xpi/content/css/tabs_squaredc2.css
+++ b/xpi/content/css/tabs_squaredc2.css
@@ -132,7 +132,9 @@
 	.tab-stack .tab-content {
 	  -moz-box-ordinal-group:1 !important;
 	}
-	.tabbrowser-tab progressmeter.tab-progress	{
+	/* TMP progress tweak */
+	#main-window[tabmix_lwt="true"] .tabbrowser-tab progressmeter.tab-progress,
+	#main-window[tabmix_lwt="false"] .tabbrowser-tab progressmeter.tab-progress {
 	  margin-top: 2.5px !important;
 	  height: 3px !important;
 	}
