--- a/xpi/content/css/close_alticon.css
+++ b/xpi/content/css/close_alticon.css
@@ -3,13 +3,16 @@
 @-moz-document url(chrome://browser/content/browser.xul){
 
 	/* Tabs toolbar tab close button (Fx31+) */
+	#navigator-toolbox #TabsToolbar #tabs-closebutton,
 	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/close_alt.png") !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
+	#navigator-toolbox #TabsToolbar #tabs-closebutton:hover,
 	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton:hover{
 	  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
 	}
+	#navigator-toolbox #TabsToolbar #tabs-closebutton:hover:active,
 	#navigator-toolbox #TabsToolbar #ctraddon_tabs-closebutton:hover:active {
 	  -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 	}
