--- a/xpi/content/css/tab_font_bold_unr.css
+++ b/xpi/content/css/tab_font_bold_unr.css
@@ -2,7 +2,7 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-	.tabbrowser-tab[unread]:not([selected=true]):hover .tab-text,
+	/*.tabbrowser-tab[unread]:not([selected=true]):hover .tab-text,*/
 	.tabbrowser-tab[unread]:not([selected=true]):not(:hover) .tab-text {
       font-weight: bold !important;
     }
