--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -225,6 +225,10 @@
 	  height: auto !important;
 	}
 
+	/* The Fox, only better add-on support*/
+	#navigator-toolbox[slimChrome="true"] #nav-bar{
+	  padding-bottom:2px !important;
+	}
 	/* zoom page add-on */
     #navigator-toolbox #nav-bar #zoompage-zoomdisplay-s,
     #navigator-toolbox #nav-bar #zoompage-zoomin-s,
