--- a/xpi/content/css/winaero/tabsontop_offextra.css
+++ b/xpi/content/css/winaero/tabsontop_offextra.css
@@ -2,17 +2,6 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
-   /* #main-window:not([tabsintitlebar]) #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
-      -moz-margin-start: 0px !important;
-	  -moz-padding-start: 2px !important;
-    }
-	@media all and (-moz-windows-glass) {
-		#main-window:not([tabsintitlebar])[tabsontop="false"][sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar{
-		  -moz-margin-start: 0px !important;
-		  -moz-padding-start: 0px !important;
-		}
-	}
-	*/
 	@media not all and (-moz-windows-glass) {
 		#main-window:not([tabsintitlebar])[tabsontop="false"][sizemode="maximized"] #TabsToolbar .tabbrowser-tabs,
 		#main-window[sizemode="normal"] #TabsToolbar .tabbrowser-tabs {
@@ -80,11 +69,11 @@
 	    #main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="normal"]  #TabsToolbar:not(:-moz-lwtheme) {
 		  border-left: 1px solid hsla(209,67%,12%,0.35) !important;
 		  border-right: 1px solid hsla(209,67%,12%,0.35) !important;
-		  border-bottom: 1px solid #aabccf !important;
+		  border-bottom: 1px solid hsla(209,67%,12%,0.0) !important;
 		  background-clip: padding-box !important;
 	    }
 	    #main-window[defaultfxtheme="true"][tabsontop="false"][sizemode="maximized"]  #TabsToolbar:not(:-moz-lwtheme) {
-		  border-bottom: 1px solid #aabccf !important;
+		  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important; /*#aabccf*/
 	    }
 	}
 
