--- a/xpi/content/css/feedinurl.css
+++ b/xpi/content/css/feedinurl.css
@@ -20,4 +20,10 @@
 	  box-shadow:none !important;
 	}
 	
+	#urlbar-icons #feed-button{
+	  -moz-appearance: none !important;
+	  margin-top:-8px !important;
+	  margin-bottom:-8px !important;
+	}
+	
 }
