--- a/xpi/content/css/appbutton2io.css
+++ b/xpi/content/css/appbutton2io.css
@@ -17,9 +17,18 @@
 
 	#ctraddon_appbutton2:-moz-locale-dir(ltr) > label{
 	  -moz-appearance: none !important;
-      margin: -1px -26px 0 -34px !important;
+      margin: 0px -26px 0 -34px !important;
 	}
 	#ctraddon_appbutton2:-moz-locale-dir(rtl) > label{
+	  -moz-appearance: none !important;
+      margin: 0px -34px 0 -26px !important;
+	}
+	
+	#main-window[sizemode="maximized"] #ctraddon_appbutton2:-moz-locale-dir(ltr) > label{
+	  -moz-appearance: none !important;
+      margin: -1px -26px 0 -34px !important;
+	}
+	#main-window[sizemode="maximized"] #ctraddon_appbutton2:-moz-locale-dir(rtl) > label{
 	  -moz-appearance: none !important;
       margin: -1px -34px 0 -26px !important;
 	}
