--- a/xpi/content/css/winxp/tabsontop_offextra.css
+++ b/xpi/content/css/winxp/tabsontop_offextra.css
@@ -27,12 +27,18 @@
 		#main-window[tabsintitlebar]:not([inFullscreen])[sizemode="normal"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
 		  margin-top: 23px !important;
 		}
+
 		#main-window[tabsintitlebar]:not([inFullscreen])[sizemode="maximized"] #navigator-toolbox #toolbar-menubar[autohide="true"][inactive="true"]{
 		  margin-top: 23px !important;
+		}
+
+		#main-window[fx32plus="true"][defaultfxtheme="true"][tabsontop="false"] #TabsToolbar:not(:-moz-lwtheme) {
+		  border-bottom: 1px solid hsla(209,67%,12%,0.25) !important;
 		}
 	}
 	
 	#main-window[defaultfxtheme="true"] #TabsToolbar:not(:-moz-lwtheme){
 	  background: -moz-Dialog !important;
 	}
+
 }
